fixed some issue with flair css. I checked the fwrapper and it was set to 10vh, which was statically containing only the 10vh, which was almost nothing. It was throwing off the spacing for margin top and bottom pretty bad. Made fwrapper.height = fit-content, problem solved. I should probably go back and fix old projects now

--- a/src/flair/flair.css
+++ b/src/flair/flair.css
@@ -4,8 +4,7 @@
 	height: fit-content;
 	width: 100%;
 	text-align: center;
-	height: 10vh;
-	margin-bottom: 4vh;
+	height: fit-content;
 	justify-content: center;
 	align-items: center;
 	margin-right: auto;
